# generator

./: Makefile.am  autogen.sh  configure.ac
etc/: Makefile.am  base.enums.proto  base.proto  business.body.plantilla  business.header.plantilla  dbex-test.conf  entity.body.plantilla  entity.header.plantilla  entry.cpp.tmpl  entry.hpp.tmpl  enums.motor.template  hulk.conf  hulk.conf.test  hulk.conf.test2  hulk.enums.proto.plantilla  hulk.proto.plantilla  hulk.schedule.conf  hulk2.conf  hulk_good.conf  queries.motor.template  shedule.test.plantilla  sim.conf  tables-body.motor.template  tables-header.motor.template  test.body.plantilla  test.body.template  test.doors.plantilla  test.header.plantilla  test.header.template  test.one.conf  test.one.plantilla  test2.body.plantilla  web.index.plantilla  web.plantilla
src/: Makefile.am  base_parser.cc  base_parser.hh  comandos.cc  comandos.hh  common.cc  common.hh  conf.cc  conf.hh  database.cc  database.hh  db.cc  file.cc  file.hh  generator.cc  generator.hh  lamb.cc  lamb.hh  main.cc  main.hh  map_file.cc  map_file.hh  opt.cc  opt.hh  parser.cc  parser.hh  stat.cc  stat.hh
