#
#
#
EXTRA_DIST = hulk.conf \
	base.enums.proto \
	base.proto \
	hulk.enums.proto \
	hulk.proto \
	entity.header.plantilla \
	entity.body.plantilla

generator_DIR = $(prefix)/etc
generator_INSTALL = hulk.conf \
	base.enums.proto \
	base.proto \
	hulk.enums.proto \
	hulk.proto \
	entity.header.plantilla \
	entity.body.plantilla
